fixed an issue where there was no padding for the Hero component on mobile

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -2,6 +2,7 @@
   min-height: 100vh;
   height: 100vh;
   display: flex;
+  display: -moz-flex;
   align-items: center;
   border-bottom: 0px;
   font-weight: 400;
@@ -23,6 +24,11 @@
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
+    padding-top: 8em;
+  }
+
+  @include respond(phone-xs) {
+    padding-top: 6em;
   }
 
   #moon {
@@ -159,8 +165,8 @@
     }
 
     @include respond(tab-port) {
-      height: 30em;
-      width: 30em;
+      height: 27em;
+      width: 27em;
     }
 
     @include respond(phone-xs) {
